# ros2_humble_test

./: README.md  ros2_sample_bugfig_3.md  ros2_sample_bugfix_2.md  ros2_sample_bugfix_4_python.md  ros_sample.md  ros_sample_v1.md
TaskManager/: readme.md
TaskManager/message_test/: CMakeLists.txt  package.xml
TaskManager/message_test/msg/: DataAB.msg  DataBA.msg  DataBC.msg  DataCB.msg
TaskManager/process_a/: package.xml  setup.cfg  setup.py
TaskManager/process_a/process_a/: intermediate_layer_a.py  process_layer_a.py  ros2_layer_a.py
TaskManager/process_b/: package.xml  setup.cfg  setup.py
TaskManager/process_b/process_b/: intermediate_layer_b.py  process_layer_b.py  ros2_layer_b.py
TaskManager/process_c/: package.xml  setup.cfg  setup.py
TaskManager/process_c/process_c/: intermediate_layer_c.py  process_layer_c.py  ros2_layer_c.py
TaskManager_topic_srv/: chatgpt_guide.md  code_modify.md  gpt_guide.md  readme.md
TaskManager_topic_srv/message/: CMakeLists.txt
TaskManager_topic_srv/message/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
TaskManager_topic_srv/message/log/: latest_build
TaskManager_topic_srv/message/srv/: SrvAB.srv  SrvBA.srv
TaskManager_topic_srv/nodeA/: package.xml  setup.cfg  setup.py
TaskManager_topic_srv/nodeB/: package.xml  setup.cfg  setup.py
gui/: gui_gpt_guide.md  gui_label.py  gui_ros.py  gui_ros_refectoring.py  main.py  main_gpt.py
linux/: ipsetting.md
sample/: cmake_install.md  grpc.md  grpc_proxy.md  python_receive.py  send.py
tip/: terminator.md
(+73 files in other folders)
